--- a/src/app/pages/components/carts/default-carts/default-carts.component.scss
+++ b/src/app/pages/components/carts/default-carts/default-carts.component.scss
@@ -9,9 +9,16 @@ $background-color: #ecf0f1;
 :host ::ng-deep{
 
   .button{
-    background-color: $secondary-color;
+    background-color: $dark-text;
     padding: 10px;
-    color: #fff;
+    border-radius: 5px;
+    color: #efefef;
     border: none;
+    cursor: pointer;
+    font-weight: 700;
+
+    &:hover{
+      color: #fff;
+    }
   }
 }
