--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -4,7 +4,7 @@
       class="block justify-content-center align-content-center text-2xl"
       style="background: transparent"
     >
-      <h2>{{'loginForm.header' | transloco}}</h2>
+      <h2>{{ "loginForm.header" | transloco }}</h2>
     </div>
     <span class="p-float-label mt-4">
       <i class="pi pi-envelope" style="color: #000"></i>
@@ -15,9 +15,7 @@
         formControlName="email"
         pTooltip="{{ 'loginForm.emailTooltip' | transloco }}"
       />
-      <label htmlFor="email">{{
-        "loginForm.emailLabel" | transloco
-      }}</label>
+      <label htmlFor="email">{{ "loginForm.emailLabel" | transloco }}</label>
     </span>
     <small
       *ngIf="
@@ -73,44 +71,44 @@
       }}
       <!-- {{userFormLogin.get('password')?.value.lenght() < 8 ? ("Şifre en az 8 karakter uzunluğunda olmalıdır") : '' }} -->
     </small>
-   <div class="mb-2">
-    <span class="mt-4">
-      <div class="remember-forget align-content-center align-content-center">
-        <div class="flex flex-row mr-3">
-          <div class="flex">
-            <input
-              id="remember"
-              name="remember"
-              type="checkbox"
-              style="width: 15px; height: 15px"
-            />
-            <label for="remember">
-              {{ "loginForm.rememberme" | transloco }}</label
-            >
+    <div class="mb-2">
+      <span class="mt-4">
+        <div class="remember-forget align-content-center align-content-center">
+          <div class="flex flex-row mr-3">
+            <div class="flex">
+              <input
+                id="remember"
+                name="remember"
+                type="checkbox"
+                style="width: 15px; height: 15px"
+              />
+              <label for="remember">
+                {{ "loginForm.rememberme" | transloco }}</label
+              >
+            </div>
+          </div>
+          <div>
+            <a routerLink="/reset-password">{{
+              "loginForm.dontforget" | transloco
+            }}</a>
           </div>
         </div>
-        <div>
-          <a routerLink="/reset-password">{{
-            "loginForm.dontforget" | transloco
-          }}</a>
-        </div>
-      </div>
-    </span>
-   </div>
-   <div>
-    <span class="button-style mt-4">
-      <button pButton class="button" (click)="onSubmitLogin()">
-        {{ "loginForm.buttonLabel" | transloco }}
-      </button>
-    </span>
-   </div>
+      </span>
+    </div>
+    <div>
+      <span class="button-style mt-4">
+        <button pButton class="button" (click)="onSubmitLogin()">
+          {{ "loginForm.buttonLabel" | transloco }}
+        </button>
+      </span>
+    </div>
     <div>
       <span
-      class="register-span flex flex-row mt-2 justify-content-between align-content-center align-items-center"
-    >
-      <p>{{ "loginForm.haveaccount" | transloco }}</p>
-      <a routerLink="/register">{{ "loginForm.createnow" | transloco }}</a>
-    </span>
+        class="register-span flex flex-row mt-2 justify-content-between align-content-center align-items-center"
+      >
+        <p>{{ "loginForm.haveaccount" | transloco }}</p>
+        <a routerLink="/register">{{ "loginForm.createnow" | transloco }}</a>
+      </span>
     </div>
     <div
       class="social block align-items-center text-center justify-content-center align-self-center"
@@ -124,7 +122,24 @@
           <p>{{ "startForm.descSocialTwo" | transloco }}</p>
         </div>
         <div class="icon-social flex">
-          <a [routerLink] = "['login']">
+          <!-- <div
+              id="g_id_onload"
+              data-client_id="614449184147-9gnmmtskp97qaccqqirdo0jfo1he55na.apps.googleusercontent.com"
+              data-context="use"
+              data-ux_mode="popup"
+              data-itp_support="true"
+              data-callback="handleCredentialResponse"
+            ></div>
+            <div
+              class="g_id_signin"
+              data-type="standard"
+              data-shape="pill"
+              data-theme="filled_blue"
+              data-text="signin_with"
+              data-size="large"
+              data-logo_alignment="left"
+            ></div> -->
+          <a>
             <div class="flex-1 font-bold text-center p-4">
               <i
                 class="pi pi-google"
@@ -146,13 +161,13 @@
               <p>{{ "startForm.piGoogle" | transloco }}</p>
             </div>
           </a>
-          <a [routerLink] = "['login']">
+          <a [routerLink]="['login']">
             <div class="flex-1 font-bold text-center p-4">
               <i class="pi pi-apple" style="color: #000"></i>
               <p>{{ "startForm.piApple" | transloco }}</p>
             </div>
           </a>
-          <a [routerLink] = "['login']">
+          <a [routerLink]="['login']">
             <div class="flex-1 font-bold text-center p-4">
               <i class="pi pi-facebook" style="color: #316ff6"></i>
               <p>{{ "startForm.piFacebook" | transloco }}</p>
@@ -162,4 +177,10 @@
       </div>
     </div>
   </form>
+
+<!-- <ng-container *ngIf="userProfile">
+  <div>Welcome, {{ userProfile.name }}</div>
+ 
+</ng-container>
+<button id="signout-button" (click)="handleSignOut()">Sign Out</button> -->
 </div>
