--- a/src/app/pages/components/account/userpassword/userpassword.component.html
+++ b/src/app/pages/components/account/userpassword/userpassword.component.html
@@ -19,6 +19,20 @@
           "userpassForm.currentPass" | transloco
         }}</label>
       </span>
+      <small
+          *ngIf="
+            newpassForm.get('password').value !=
+            newpassForm.get('confirmpassword').value
+          "
+          class="block text-red-500"
+        >
+          {{
+            newpassForm.get("confirmpassword").errors != null &&
+            newpassForm.get("confirmpassword").errors["required"]
+              ? ("registerForm.confirmSmallSecond" | transloco)
+              : ""
+          }}
+        </small>
     </div>
     <div class="flex">
       <span class="p-float-label">
