--- a/src/app/pages/components/creoter-form/creoter-form.component.scss
+++ b/src/app/pages/components/creoter-form/creoter-form.component.scss
@@ -221,8 +221,29 @@ $background-color: #ecf0f1;
 
     }
 
-  }
+   
 
+  }
+  .dropdown {
+    width: 100%;
+    display: flex;
+    font-size: 1rem;
+    border: none;
+    padding-left: 25px;
+    border-bottom: 2px solid #3498db;
+    background-color: transparent;
+    color: #34495e;
+    transition: border-color 0.3s;
+
+    &:focus {
+      outline: none;
+      border-bottom: 2px solid #1071b3;
+    }
+
+    .p-dropdown-trigger {
+      color: #000;
+    }
+  }
 
 
   .calendar {
