--- a/src/app/notfound/notfound.component.html
+++ b/src/app/notfound/notfound.component.html
@@ -1,7 +1,25 @@
-<div class="px-5 min-h-screen flex justify-content-center align-items-center">
-  <div class="z-1 text-center">
-      <div class="text-900 font-bold text-8xl mb-4">Oops!</div>
-      <p class="line-height-3 mt-0 mb-5 text-700 text-xl font-medium">There is nothing here</p>
-      <p-button [routerLink]="['/']" styleClass="p-button-warning font-medium p-button-raised">Go to Dashboard</p-button>
-  </div>
-</div>
+<section class="page_404">
+	<div class="container">
+		<div class="row">	
+		<div class="col-sm-12 ">
+		<div class="col-sm-10 col-sm-offset-1  text-center">
+		<div class="four_zero_four_bg" style="background-image: url('assets/images/dribbble_1.gif');">
+			<h1 class="text-center ">404</h1>
+		
+		
+		</div>
+		
+		<div class="contant_box_404">
+		<h3 class="h2">
+      Kaybolmuş gibi görünüyorsun
+		</h3>
+		
+		<p>Aradığınız sayfa mevcut değil!</p>
+		
+		
+	</div>
+		</div>
+		</div>
+		</div>
+	</div>
+</section>
