--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -43,6 +43,7 @@
         id="password"
         formControlName="password"
         styleClass="password"
+        [toggleMask]="true"
         [feedback]="false"
         pTooltip="{{ 'loginForm.passwordTooltip' | transloco }}"
       ></p-password>
