--- a/src/app/home/login/login.component.scss
+++ b/src/app/home/login/login.component.scss
@@ -172,22 +172,43 @@ $background-color: #ecf0f1;
 
 :host ::ng-deep {
   .password.p-password {
+    width: 100%;
+    input{
     position: relative;
     width: 100%;
     font-size: 1rem;
+    cursor: pointer;
+    padding: 15px;
     border: none;
     border-bottom: 2px solid $primary-color;
     background-color: transparent;
+    padding-left: 35px;
     color: $dark-text;
     transition: border-color 0.3s;
     &:focus {
       outline: none;
       border-bottom: 2px solid $secondary-color;
     }
-    .p-element {
-      width: 100%;
-      border: none;
-      padding-left: 35px;
+
+
+      .pi {
+        position: absolute;
+        left: 10px;
+        top: 50%;
+        transform: translateY(-50%);
+        font-size: 1rem;
+        color: $dark-text;
+      }
+      i {
+        position: absolute;
+        z-index: 1;
+        padding: 5px;
+        color: #000;
+        top: 10px;
+        left: 8px;
+      }
+
     }
+
   }
 }
