--- a/src/assets/layout/styles/layout/_topbar.scss
+++ b/src/assets/layout/styles/layout/_topbar.scss
@@ -20,6 +20,7 @@
         font-weight: 500;
         width: 300px;
         border-radius: 12px;
+        cursor: pointer;
 
         img {
             height: 2.5rem;
