--- a/src/app/pages/components/creoter-form/creoter-form.component.html
+++ b/src/app/pages/components/creoter-form/creoter-form.component.html
@@ -143,7 +143,7 @@
         <p-dropdown
           [options]="districts"
           styleClass="dropdown"
-          formControlName="discrits"
+          formControlName="distcrits"
           optionLabel="label"
           [showClear]="true"
           placeholder="{{'creoterForm.districtsName' | transloco}}"
