--- a/src/app/admin/layout/menu.component.html
+++ b/src/app/admin/layout/menu.component.html
@@ -15,6 +15,13 @@
     </div>
   </li>
   <li>
+    <div [routerLink]="['/admin','wait-list']">
+      <h6>
+        <i class="pi pi-users"></i> Wait List Users
+      </h6>
+    </div>
+  </li>
+  <li>
     <div [routerLink]="['/admin','orders-management']">
       <h6>
         <i class="pi pi-clone"></i> Orders-Mangement
