--- a/src/app/home/reset-password/reset-password.component.html
+++ b/src/app/home/reset-password/reset-password.component.html
@@ -38,7 +38,7 @@
       }}
     </small>
     <span class="button-style mt-4">
-      <button pButton class="button">
+      <button pButton class="button" (click)="deneme()">
         {{ "resetForm.buttonLabelNew" | transloco }}
       </button>
     </span>
@@ -46,7 +46,7 @@
       <button
         pButton
         class="button custom-button"
-        routerLink="/login"
+        [routerLink]="['/login']"
       >
         {{ "resetForm.buttonLabelBack" | transloco }}
       </button>
