--- a/src/app/dashboard/components/orders-management/get-orders/get-orders.component.html
+++ b/src/app/dashboard/components/orders-management/get-orders/get-orders.component.html
@@ -1,170 +1,71 @@
-<!-- get-orders.component.html -->
-
 <div class="orders-list">
-  <h2>Sipariş Listesi</h2>
+  <h2>{{'dGetorders.header' | transloco}}</h2>
 
-    <div class="flex">
-         <button type="button" pButton pRipple icon="pi pi-file-pdf" (click)="exportPdf()" class="p-button-success mx-2 my-2" pTooltip="PDF" tooltipPosition="bottom">PDF</button>
-         <button type="button" pButton pRipple icon="pi pi-file-excel" (click)="exportExcel()" class="p-button-success mx-2 my-2" pTooltip="XLS" tooltipPosition="bottom">XLS</button>
-        </div>
-
+  <div class="flex">
+    <button type="button" pButton  icon="pi pi-file-pdf" (click)="exportPdf()" class="p-button mx-2 my-2" pTooltip="PDF" tooltipPosition="bottom">{{'dGetorders.pdf' | transloco}}</button>
+    <button type="button" pButton  icon="pi pi-file-excel" (click)="exportExcel()" class="p-button mx-2 my-2" pTooltip="XLS" tooltipPosition="bottom">{{'dGetorders.xls' | transloco}}</button>
+  </div>
+ 
   <div *ngFor="let order of orders" class="order-item">
     <div class="order-info">
-      <div><strong>Sipariş ID:</strong> {{ order.id }}</div>
-      <div><strong>Müşteri ID:</strong> {{ order.userId }}</div>
-    </div>
-
-    <div class="product-list">
-      <div *ngFor="let product of order.orders" class="product-item">
-        <img [src]="getFileUrl(product.file)" alt="{{ product.name }}" class="product-image" />
-        <div class="product-details">
-          <div><strong>Ad: </strong> {{product.name}}</div>
-            <!-- <div><strong>Açıklama: </strong>{{ product.description}}</div> -->
-          <div class="product-meta">
-            <div><strong>Fiyat: </strong> {{ product.priceStacked | currency:'TRY':'symbol' }}</div>
-            <div><strong>Adet: </strong> {{ product.quantity }}</div>
-            <div><strong>Durum: </strong> {{ product.selectedStatus.name }}</div>
-                <!-- Kullanıcının Adı -->
-          <div><strong>Müşteri Adı: </strong> {{ userData?.name }}</div>
-          <!-- Kullanıcının E-posta Adresi -->
-          <div><strong>Müşteri E-posta: </strong> {{ userData?.email }}</div>
-            <div><strong>Müşteri Address: </strong> {{ userData?.address }}</div>
-          </div>
-        </div>
+      <div *ngFor="let userData of order?.userDataArray">
+        <div>{{'dGetorders.userId' | transloco}} {{ order?.userId }}</div>
+        <div>{{'dGetorders.userName' | transloco}}  {{ userData.name }}</div>
+        <div>{{'dGetorders.userEmail' | transloco}}  {{ userData.email }}</div>
+        <div>{{'dGetorders.userAddress' | transloco}}  {{ userData.address }}</div>
+        <button type="button" pButton class="p-button" (click)="toggleUserDetails(order.userId)">
+          {{ userDetailStatus[order.userId] ? ("dGetorders.close" | transloco) : ("dGetorders.open" | transloco) }}
+        </button>
+        <table class="product-table">
+          <thead>
+            <tr>
+              <th>{{'dGetorders.productFile' | transloco}}</th>
+              <th>{{'dGetorders.productName' | transloco}}</th>
+              <th>{{'dGetorders.piecePrice' | transloco}}</th>
+              <th>{{'dGetorders.piece' | transloco}}</th>
+              <th>{{'dGetorders.status' | transloco}}</th>
+              <th>{{'dGetorders.totalPrice' | transloco}}</th>
+            </tr>
+          </thead>
+        </table>
       </div>
+     
     </div>
-
-    <div class="total-price">
-      <h3>Toplam Tutar: {{ order.totalAmount | currency:'USD':'symbol' }}</h3>
+    <div class="product-list" *ngIf="userDetailStatus[order.userId]">
+      <table class="product-table">
+        
+        <tbody>
+          <tr *ngFor="let product of order?.orders" class="product-item">
+            <td>
+              <img [src]="getFileUrl(product?.product.file)" alt="{{ product?.product.name }}" class="product-image" />
+            </td>
+            <td>{{ product?.product.name }}</td>
+            <td>{{ product?.product.priceStacked | currency:'USD':'symbol' }}</td>
+            <td>{{ product?.product.quantity }}</td>
+            <td>{{ product?.product.selectedStatus?.name | stockStatus}}</td>
+            <td> {{ order.totalAmount | currency:'USD':'symbol' }}</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
+    
   </div>
 </div>
-
-<section class="h-100 gradient-custom">
-  <div class="container py-5 h-100">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col-lg-10 col-xl-8">
-        <div class="card" style="border-radius: 10px;">
-          <div class="card-header px-4 py-5">
-            <h5 class="text-muted mb-0">Thanks for your Order, <span style="color: #a8729a;">Anna</span>!</h5>
-          </div>
-          <div class="card-body p-4">
-            <div class="d-flex justify-content-between align-items-center mb-4">
-              <p class="lead fw-normal mb-0" style="color: #a8729a;">Receipt</p>
-              <p class="small text-muted mb-0">Receipt Voucher : 1KAU9-84UIL</p>
-            </div>
-            <div class="card shadow-0 border mb-4">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col-md-2">
-                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/13.webp"
-                      class="img-fluid" alt="Phone">
-                  </div>
-                  <div class="col-md-2 text-center d-flex justify-content-center align-items-center">
-                    <p class="text-muted mb-0">Samsung Galaxy</p>
-                  </div>
-                  <div class="col-md-2 text-center d-flex justify-content-center align-items-center">
-                    <p class="text-muted mb-0 small">White</p>
-                  </div>
-                  <div class="col-md-2 text-center d-flex justify-content-center align-items-center">
-                    <p class="text-muted mb-0 small">Capacity: 64GB</p>
-                  </div>
-                  <div class="col-md-2 text-center d-flex justify-content-center align-items-center">
-                    <p class="text-muted mb-0 small">Qty: 1</p>
-                  </div>
-                  <div class="col-md-2 text-center d-flex justify-content-center align-items-center">
-                    <p class="text-muted mb-0 small">$499</p>
-                  </div>
-                </div>
-                <hr class="mb-4" style="background-color: #e0e0e0; opacity: 1;">
-                <div class="row d-flex align-items-center">
-                  <div class="col-md-2">
-                    <p class="text-muted mb-0 small">Track Order</p>
-                  </div>
-                  <div class="col-md-10">
-                    <div class="progress" style="height: 6px; border-radius: 16px;">
-                      <div class="progress-bar" role="progressbar"
-                        style="width: 65%; border-radius: 16px; background-color: #a8729a;" aria-valuenow="65"
-                        aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <div class="d-flex justify-content-around mb-1">
-                      <p class="text-muted mt-1 mb-0 small ms-xl-5">Out for delivary</p>
-                      <p class="text-muted mt-1 mb-0 small ms-xl-5">Delivered</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="card shadow-0 border mb-4">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col-md-2">
-                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/1.webp"
-                      class="img-fluid" alt="Phone">
-                  </div>
-                  <div class="col-md-2 text-center d-flex justify-content-center align-items-center">
-                    <p class="text-muted mb-0">iPad</p>
-                  </div>
-                  <div class="col-md-2 text-center d-flex justify-content-center align-items-center">
-                    <p class="text-muted mb-0 small">Pink rose</p>
-                  </div>
-                  <div class="col-md-2 text-center d-flex justify-content-center align-items-center">
-                    <p class="text-muted mb-0 small">Capacity: 32GB</p>
-                  </div>
-                  <div class="col-md-2 text-center d-flex justify-content-center align-items-center">
-                    <p class="text-muted mb-0 small">Qty: 1</p>
-                  </div>
-                  <div class="col-md-2 text-center d-flex justify-content-center align-items-center">
-                    <p class="text-muted mb-0 small">$399</p>
-                  </div>
-                </div>
-                <hr class="mb-4" style="background-color: #e0e0e0; opacity: 1;">
-                <div class="row d-flex align-items-center">
-                  <div class="col-md-2">
-                    <p class="text-muted mb-0 small">Track Order</p>
-                  </div>
-                  <div class="col-md-10">
-                    <div class="progress" style="height: 6px; border-radius: 16px;">
-                      <div class="progress-bar" role="progressbar"
-                        style="width: 20%; border-radius: 16px; background-color: #a8729a;" aria-valuenow="20"
-                        aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <div class="d-flex justify-content-around mb-1">
-                      <p class="text-muted mt-1 mb-0 small ms-xl-5">Out for delivary</p>
-                      <p class="text-muted mt-1 mb-0 small ms-xl-5">Delivered</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="d-flex justify-content-between pt-2">
-              <p class="fw-bold mb-0">Order Details</p>
-              <p class="text-muted mb-0"><span class="fw-bold me-4">Total</span> $898.00</p>
-            </div>
-
-            <div class="d-flex justify-content-between pt-2">
-              <p class="text-muted mb-0">Invoice Number : 788152</p>
-              <p class="text-muted mb-0"><span class="fw-bold me-4">Discount</span> $19.00</p>
-            </div>
-
-            <div class="d-flex justify-content-between">
-              <p class="text-muted mb-0">Invoice Date : 22 Dec,2019</p>
-              <p class="text-muted mb-0"><span class="fw-bold me-4">GST 18%</span> 123</p>
-            </div>
-
-            <div class="d-flex justify-content-between mb-5">
-              <p class="text-muted mb-0">Recepits Voucher : 18KU-62IIK</p>
-              <p class="text-muted mb-0"><span class="fw-bold me-4">Delivery Charges</span> Free</p>
-            </div>
-          </div>
-          <div class="card-footer border-0 px-4 py-5"
-            style="background-color: #a8729a; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">
-            <h5 class="d-flex align-items-center justify-content-end text-white text-uppercase mb-0">Total
-              paid: <span class="h2 mb-0 ms-2">$1040</span></h5>
-          </div>
-        </div>
+<div class="card" *ngIf="!orders || orders.length === 0">
+  <section class="page_404">
+    <div class="container">
+      <div class="row">	
+      <div class="col-sm-12 ">
+      <div class="col-sm-10 col-sm-offset-1  text-center">
+      <div class="four_zero_four_bg" style="background-image: url('assets/images/dribbble_1.gif');">
+        <h4 class="text-center ">{{'dGetorders.defaultHeader' | transloco}}</h4>
+        <h6 class="text-center">
+          {{'dGetorders.defaultDecs' | transloco}}
+        </h6>
+      </div>
+      </div>
+      </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
+</div>
