--- a/src/app/pages/components/orders/content-table/content-table.component.html
+++ b/src/app/pages/components/orders/content-table/content-table.component.html
@@ -16,25 +16,25 @@
       </div>
     </div>
     <div class="col-12">
-      <div class="p-2 my-4 flex flex-column lg:flex-row justify-content-between align-items-center" *ngFor="let product of products; let i = index;">
+      <div class="p-2 my-4 flex flex-column lg:flex-row justify-content-between align-items-center" *ngFor="let product of order.orders; let i = index;">
         <div class="flex flex-column lg:flex-row justify-content-center align-items-center px-2">
-          <img [src]="getFileUrl(product?.file)" alt="product" class="w-8rem h-8rem mr-3 flex-shrink-0" />
+          <img [src]="getFileUrl(product?.product?.file)" alt="product" class="w-8rem h-8rem mr-3 flex-shrink-0" />
           <div class="flex flex-column my-auto text-center md:text-left">
             <span class="mb-3 mt-3">
               {{'contentOrdersForm.name' |  transloco}}
-              <span class="text-700 mb-3 mt-3 lg:mt-0">{{ product?.name }}</span>
+              <span class="text-700 mb-3 mt-3 lg:mt-0">{{ product?.product?.name }}</span>
             </span>
             <span>
               {{'contentOrdersForm.quantity' |  transloco}}
-              <span class="text-700 text-sm mb-3">{{ product?.quantity }}</span>
+              <span class="text-700 text-sm mb-3">{{ product?.product?.quantity }}</span>
             </span>
           </div>
         </div>
-        <div class="bg-gray-100 mr-0 lg:mr-3 mt-4 lg:mt-0 p-2 flex align-items-center" *ngIf="product?.selectedStatus">
+        <div class="bg-gray-100 mr-0 lg:mr-3 mt-4 lg:mt-0 p-2 flex align-items-center" *ngIf="product?.product?.selectedStatus">
           <span class="text-black-500">
             <p-tag
-              [value]="product.selectedStatus.name | stockStatus"
-              [severity]="getSeverity(product)"
+              [value]="product?.product?.selectedStatus?.name | stockStatus"
+              [severity]="getSeverity(product?.product)"
             ></p-tag>
           </span>
         </div>
